changed some words

--- a/index.html
+++ b/index.html
@@ -55,9 +55,15 @@
         </div>
         <div class="contato">
           <p>Telefone: (22) 992351421</p>
+          <hr />
           <p>Email: victot21@hotmail.com</p>
+          <hr />
           <p>Github: https://github.com/victot21</p>
-          <p>Portifolio: https://victot21.github.io (Você esta aqui!)</p>
+          <hr />
+          <p>
+            Curriculum: https://victot21.github.io <br />
+            (Você esta aqui!)
+          </p>
         </div>
       </div>
     </div>
